# OpenGL-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
OpenGLCourse/: Application.cpp  main.cpp
OpenGLCourse/res/shaders/: Basic.shader.gl
OpenGLCourse/src/: Application.cpp  Renderer.cpp
OpenGLCourse/src/IndexBuffer/: IndexBuffer.cpp  IndexBuffer.h
OpenGLCourse/src/Renderer/: Renderer.cpp  Renderer.h
OpenGLCourse/src/Shader/: Shader.cpp  Shader.h
OpenGLCourse/src/Utils/: OpenGLHandler.h.cpp
OpenGLCourse/src/VertexArray/: VertexArray.cpp  VertexArray.h
OpenGLCourse/src/VertexBuffer/: VertexBuffer.cpp  VertexBuffer.h
OpenGLCourse/src/VertexBufferLayout/: VertexBufferLayout.cpp  VertexBufferLayout.h
